hphp/hack/test/typecheck/immvector_immutable2.php.exp
File "immvector_immutable2.php", line 16, characters 3-13:
You cannot mutate this (Typing[4011])
  File "immvector_immutable2.php", line 15, characters 9-27:
  This is an object of type ImmVector<int>
File "immvector_immutable2.php", line 14, characters 10-12:
Was expecting a return type hint (Typing[4030])
